--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,8 @@
     "license": "MIT",
     "require": {
         "spatie/laravel-data": "^3.0",
-        "illuminate/support": "^9.0 || ^10.0",
-        "nesbot/carbon": "^2.62.1",
-        "illuminate/notifications": "^9.0 || ^10.0",
-        "illuminate/console": "^9.0 || ^10.0",
-        "illuminate/contracts": "^9.0 || ^10.0",
-        "illuminate/routing": "^9.0 || ^10.0",
-        "illuminate/view": "^9.0 || ^10.0",
-        "illuminate/filesystem": "^9.0 || ^10.0",
-        "illuminate/database": "^9.0 || ^10.0"
+        "laravel/framework": "^9.0 || ^10.0",
+        "nesbot/carbon": "^2.62.1"
     },
     "autoload": {
         "psr-4": {
